# rushlite

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  activation_8hpp_source.html  align__utils_8hpp_source.html  allocator__core_8hpp_source.html  annotated.html  any_8hpp_source.html  autograd_2core_8hpp_source.html  autograd_2functions_2expand__ops_8hpp_source.html  autograd_2functions_2matrix__ops_8hpp_source.html  autograd_2functions_2overloads_8hpp_source.html  autograd_2functions_2reduct__ops_8hpp_source.html  autograd_2functions_2unary__ops_8hpp_source.html  batch__sample_8hpp_source.html  binary_8hpp_source.html  binary__decl_8hpp_source.html  capture__mode_8hpp_source.html  classes.html  classlmp_1_1autograd_1_1GradGuard-members.html  classlmp_1_1autograd_1_1GradGuard.html  classlmp_1_1autograd_1_1Variable-members.html  classlmp_1_1autograd_1_1Variable.html  classlmp_1_1autograd_1_1Variable__inherit__graph.dot  classlmp_1_1detail_1_1BaseStream-members.html  classlmp_1_1detail_1_1BaseStream.html  classlmp_1_1detail_1_1CheckStream-members.html  classlmp_1_1detail_1_1CheckStream.html  classlmp_1_1detail_1_1CheckStream__inherit__graph.dot  classlmp_1_1inductor_1_1NVRTCInductorBackend-members.html  classlmp_1_1inductor_1_1NVRTCInductorBackend.html  classlmp_1_1inductor_1_1NVRTCInductorBackend__inherit__graph.dot  classlmp_1_1nets_1_1AnyModule-members.html  classlmp_1_1nets_1_1AnyModule.html  classlmp_1_1nets_1_1AnyModule_1_1Placeholder-members.html  classlmp_1_1nets_1_1AnyModule_1_1Placeholder.html  classlmp_1_1nets_1_1DropoutImpl-members.html  classlmp_1_1nets_1_1DropoutImpl.html  classlmp_1_1nets_1_1DropoutImpl__coll__graph.dot  (+635 more)
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/: README.md  repro_cuda_allocator_oom.py
benchmarks/backends/: __init__.py  rushlite_backend.py  torch_backend.py
benchmarks/common/: __init__.py  backend.py  report.py  run.py  runner.py  spec.py  timer.py
benchmarks/fusion/: report.py  run.py  runner.py  spec.py
benchmarks/fusion/workloads/: __init__.py  base.py  gru.py  lstm.py
benchmarks/lamp3/: op_defs.hpp  reg_defs.hpp
benchmarks/torch/: all_tests.py
csrc/bindings/: constructor.hpp  core.cpp  cuda.hpp  grad_mode.hpp  tensor.hpp  variable.hpp
csrc/bindings/functions/: binary.hpp  matrix.hpp  reduct.hpp  unary.hpp  view.hpp
csrc/include/lamp3/autograd/: core.hpp  forward_function.hpp  grad_mode.hpp  variable.hpp
csrc/include/lamp3/common/: assert.hpp
csrc/include/lamp3/tensor/: core.hpp  infer_meta.hpp  offset_util.hpp  tensor.hpp  tensor_impl.hpp
csrc/include/lamp3/tensor/cpu/: binary.hpp  kernels.hpp  matrix.hpp  memory.hpp  meta_handler.hpp  offset_util.hpp  reduct.hpp  unary.hpp
csrc/include/lamp3/tensor/cuda/: binary.cuh  expand.cuh  kernels.cuh  list_ptr.cuh  matrix.cuh  memory.cuh  offset_util.cuh  reduct.cuh  unary.cuh  vec.cuh
csrc/include/lamp3/tensor/lazy/functions/: elementwise_unary.hpp
csrc/include/lamp3/tensor/native/: memory_ops.hpp  shape_ops.hpp  unary_ops.hpp
csrc/src/autograd/: CMakeLists.txt  grad_mode.cpp  variable.cpp
csrc/src/autograd/functions/: matrix_ops.cpp  unary_ops.cpp
csrc/src/inductor/nvrtc/: fused_graph.cpp  nvrtc_backend.cpp
csrc/src/tensor/: CMakeLists.txt  infer_meta.cpp  tensor.cpp  tensor_impl.cpp
csrc/src/tensor/cpu/: binary.cpp  expand.cpp  kernels.cpp  matrix.cpp  memory.cpp  meta_handler.cpp  offset_util.cpp  reduct.cpp  unary.cpp
csrc/src/tensor/cuda/: allocator.cu  allocator.cuh  allocator_core.hpp  binary.cu  expand.cu  kernels.cu  matrix.cu  memory.cu  offset_util.cu  reduct.cu  unary.cu
csrc/src/tensor/lazy/functions/: elementwise_unary.cpp
csrc/src/tensor/native/: expand_ops.cpp  memory_ops.cpp  shape_ops.cpp  unary_ops.cpp
csrc/tests/: CMakeLists.txt  autograd_tests.cpp  noncontiguous_ops_tests.cpp  offset_util_cuda_tests.cu  offset_util_test_cases.hpp  offset_util_tests.cpp  playground.cpp  reduct_benchmark.cpp  tensor_layout_tests.cpp  tensor_tests.cpp
docs/: PLAN-noncontiguous-tensors-subset-1.md  PLAN-noncontiguous-tensors-subset-2.md  PLAN-noncontiguous-tensors-subset-3.md  SCOPE-noncontiguous-tensors-v1.md  cuda_allocator_code_change_plan.md  cuda_allocator_design.md  cuda_allocator_preimplementation.md  friction-log-0.0.1.md
docs/examples/: spiral_walkthrough.py
prototypes/cuda_allocator/: README.md  allocator_model.hpp  allocator_model_test.cpp  cuda_allocator_test.cu
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  (+19 more)
src/rushlite/: __init__.py  grad_mode.py
src/rushlite/nets/: Module.py  __init__.py
src/rushlite/nets/layers/: __init__.py  activation.py  container.py  dropout.py  linear.py
tests/benchmarks/: conftest.py  test_fusion_report.py  test_fusion_spec.py  test_fusion_workloads.py  test_nvrtc_async_contract.py  test_timer_samples.py
tests/ci/: modal_gpu.py
tests/graphs/: runner.py  templates.py  test_graphs.py
tests/stress/: pytorch_stress_test.py  testutils.py
tests/unit/: data_binding_test.py  test_grad_mode.py  test_module.py
