[project]
name = "rushlite"
version = "0.0.1"
description = "A lightweight machine learning framework from scratch"
authors = [{ name = "clay-arras", email = "astrollin.neil@gmail.com" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = [
    #    "pybind11>=3.0.1,<4",
    #    "scikit-build-core>=0.11.6",
    #    "setuptools>=80.9.0",
    #    "wheel>=0.45.1",
    "pybind11>=3.0.4",
    "scikit-build-core>=0.12.2",
    "setuptools>=81.0.0",
    "wheel>=0.47.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rushlite/rushlite"
Issues = "https://github.com/rushlite/rushlite/issues"


[dependency-groups]
dev = [
    "black",
    "ruff",
    "matplotlib",
    "numpy",
    "pytest"
]

[project.optional-dependencies]
cpu = [ "torch>=2.9.1", ]
cu128 = [ "torch>=2.9.1", ]

[tool.uv]
package = false
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["src/rushlite"]

[tool.scikit-build.cmake]
build-type = "Debug"
define.LMP_ENABLE_CUDA = "OFF"
define.LMP_ENABLE_COVERAGE = "OFF"
define.LMP_ENABLE_TEST = "OFF"
define.LMP_ENABLE_BENCH = "OFF"
